# MARS-Flight-System-Firmware

./: .gitmodules  CONTRIBUTING.md  LICENSE  README.md  configs.txt  platformio.ini  t.m
COMP2/src/: receiver.h
COMP2/src/drivers/: MotorController.cpp  MotorController.h  _motors.cpp  _motors.h  mpu6050.cpp  mpu6050.h
Component Circuits/MARS_GPS/: MARS_GPS_CIRCUIT.docx
Component Circuits/MARS_IMU/: MARS_IMU_CIRCUIT.docx
Component Circuits/MARS_MICROSERVO/: MARS_MicroServo_CIRCUIT.docx  ~$RS_MicroServo_CIRCUIT.docx
DevGroundM/: build_dist.py  index.html  relayMerged.html
DevGroundM/css/: styles.css
DevGroundM/js/: elements.js  main.js  mini_apps.js
Firmware-Base/TST/: platformio.ini
Firmware-Base/TST/src/: ESP32_SerialComm.cpp  ESP32_SerialComm.h  _broadcast.cpp  _broadcast.h  main.cpp  page.cpp  sender.h
Firmware-Base/TestBed/src/: gps.cpp  gps.h  main.cpp
LIAM/: AAgentGuidance.cpp  AgentGuidance.cs  DataDisplay.cpp  README.md  Transponder.cpp  TransponderRangeIndicator.cs  UAVDisplay.cs
LIAM/dev/: HIVE2ControlSimulation.py  PID.py  angles_pid.py  decomposer.py  main.py  pathTest.py  test.py  trace.py  trajectoryTest.py  trajectoryTrace.py  utility.py
LIAM/dev/simulator/: physics.py  visualization.py
LIAM/dev/tests/: pid_test.py  state.py  test.py  trajectoryTest.py
MARS_SERVO/: MARS_SERVO_CIRCUIT.docx
MATLAB/: angle_nav.m
MATLAB/Path_Simulation/: ExportProcess.m  Instructions_Description.m  Path.m  Path2.m  UI.m  addInitialAndEndpoint.m  dialogBox.m  errorChecks.m  exportDescription.m  findDistanceBetweenNodes.m  findNeighborNodes.m  findNeighborNodesEXP.m  findPairInMap.m  main_scriptFile.m  plotButtonPushed.m  showPlotAS.m
assets/: FILESYSTEM_API.md  FLIGHT_LOG_REQ.md  PTAM API.md  configs.txt
base-firmware/: CMakeLists.txt  sdkconfig  sdkconfig.old
base-firmware/components/Comms/: CMakeLists.txt  _broadcast.cpp  _broadcast.h  page.cpp
base-firmware/components/HALX/: CMakeLists.txt  fan_relay.cpp  fan_relay.h  mg90s_servo.cpp  mg90s_servo.h  ssd1306.cpp  ssd1306.h
base-firmware/components/PTAM/: CMakeLists.txt  _ptam.cpp  _ptam.h
base-firmware/components/system/: CMakeLists.txt  _state.cpp  _state.h  sys_controller.cpp  sys_controller.h  validateSensors.h
base-firmware/main/: CMakeLists.txt  base-firmware.cpp
deprecated/ref/src/: config.h
platform/bootloader_hooks/main/: CMakeLists.txt  _marsEntry.cpp
ref/COMP2/src/: StringParser.h  main.cpp
ref/src/Control/: _pid.h
ref/src/Control/Nav/: _nav.h
ref/src/PTAM/: _ptam.h
ref/src/system/: _state.cpp  _state.h  flight_tasks.cpp  sys_controller.cpp
ref/src/util/: _encode.cpp  defi.h
src/: main.cpp
src/COMP2/src/: main.cpp
src/Comms/: _encode.h  sender.cpp  sender.h  stack_send.cpp  stack_send.h  sys_wifi.cpp  sys_wifi.h
src/Control/: _pid.cpp  _pid.h  test  test-pid.cpp
src/Control/Nav/: _nav.cpp
src/Flight/: mode_cruise.h  mode_takeoff.cpp  mode_takeoff.h
src/HALX/drivers/: _motors.h
src/PTAM/: _ptam.cpp  _ptam.h  _ptamAPI.cpp  _ptamAPI.h  temp_access_mem.cpp  temp_access_mem.h
src/PTAM/deprecated/: _ptamAPI.cpp  temp_access_mem.cpp  temp_access_mem.h
src/WingControl/: _wingDynamics.cpp  _wingDynamics.h
src/drivers/: _imu.cpp  _imu.h  _neo6M.cpp  _neo6M.h
src/drivers/motors/: _motors.cpp  _motors.h
src/module-router/: route.cpp  route.h
src/sensor_drivers/: _imu.cpp  _imu.h
src/system/: NonBlockingDelay.cpp  _state.cpp  _state.h  flight_tasks.h  onboardDisplay.cpp  onboardDisplay.h  sys_controller.cpp  sys_controller.h
src/system/Comms/: _broadcast.cpp
src/util/: defi.h  utility.cpp
test/Logging/: CMakeLists.txt  LoggingDoc.md  logger.cpp  logger.hpp  unittest_logger.cpp
test/PID/: PIDtest  _pid.cpp  _pid.h  test-pid.cpp
test/PTAM/: PTAMTEST  _ptam.cpp  _ptam.h  unittestPTAM.cpp
test/WingOutputs/: _motors.cpp  _motors.h  _wingDynamics.cpp  _wingDynamics.h  unit  unit_test_wing_outputs.cpp
test/abortmanager/: abort.cpp  abort.h
test/atmegaChipTesting/: platformio.ini
test/server/server-test/components/HALX/: CMakeLists.txt  MPU6050.cpp  MPU6050.h  MotorController.cpp  MotorController.h  Vmotor.cpp  Vmotor.h  _SD.cpp  _SD.h  _SD_FileSystem.cpp  _SD_FileSystem.h  _barometerEntry.cpp  _barometerEntry.h  _battery.cpp  _battery.h  atgm336H.cpp  atgm336H.h  bmp280.cpp  bmp280.h  bmx280.cpp  bmx280_bits.h  bno055.cpp  bno055.h  fan_relay.cpp  fan_relay.h  i2cdev.h  mg90s_servo.cpp  mg90s_servo.h  ssd1306.cpp  ssd1306.h  ssd1306_fonts.cpp  ssd1306_fonts.h
test/server/server-test/main/: CMakeLists.txt  server-test.cpp
test/statemachine/: _ptam.cpp  _ptam.h  _state.cpp  _state.h  fullBuild  main.cpp  sys_controller.cpp  sys_controller.h
test/token_auth/: token.cpp
(+64 files in other folders)
