
idf_component_register(SRCS "_marsEntry.cpp" 
                            "../bootloader_components/Control/_pid.cpp"
                            "../bootloader_components/system/validateSensors.cpp"
                            "../bootloader_components/PTAM/_ptam.cpp"
                    INCLUDE_DIRS ""
                    )
