idf_component_register(SRCS "server-test.cpp"
                            "../components/Comms/_broadcast.cpp"
                            "../components/HALX/mg90s_servo.cpp"
                            "../components/HALX/MPU6050.cpp"
                            "../components/HALX/ssd1306.cpp"
                            "../components/HALX/ssd1306_fonts.cpp"
                    INCLUDE_DIRS ".")
