idf_component_register(SRCS "server-test.cpp"
                            "../components/Comms/_broadcast.cpp"
                            "../components/HALX/mg90s_servo.cpp"
                            "../components/HALX/MPU6050.cpp"
                            "../components/HALX/ssd1306.cpp"
                            "../components/HALX/ssd1306_fonts.cpp"
                            "../components/HALX/Vmotor.cpp"
                            "../components/HALX/_barometerEntry.cpp"
                            "../components/HALX/fan_relay.cpp"
                            "../components/HALX/bno055.cpp"
                            "../components/HALX/atgm336H.cpp"
                            "../components/HALX/_SD_FileSystem.cpp"
                            "../components/HALX/MotorController.cpp")
 